[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 28 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 5 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( -0.365227, -34.19 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -29 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="gnd_dtct" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gnd_dtct"]
shape = SubResource( 2 )

[node name="climb_wall" type="Area2D" parent="."]
position = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="climb_wall"]
shape = SubResource( 3 )
[connection signal="body_entered" from="gnd_dtct" to="." method="_on_gnd_dtct_body_entered"]
[connection signal="body_exited" from="gnd_dtct" to="." method="_on_gnd_dtct_body_exited"]
[connection signal="body_entered" from="climb_wall" to="." method="_on_climb_wall_body_entered"]
[connection signal="body_exited" from="climb_wall" to="." method="_on_climb_wall_body_exited"]
